[tool.poetry]
name = "nubus-provisioning-consumer"
version = "0.1.0"
description = "Provisioning consumer library"
authors = [
    "Univention GmbH <packages@univention.de>",
]
license = "GNU Affero General Public License v3"
packages = [
    { include = "univention/provisioning/consumer", from = "." },
    { include = "univention/provisioning/models", from = "." }
]

[tool.poetry.dependencies]
aiohttp = "^3.8.5"
jsondiff = "^2.2.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python = "^3.11"

[tool.poetry.scripts]
consumer = "univention.provisioning.consumer.example_client.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "4.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]  # activate isort

[tool.ruff.lint.isort]
known-first-party = ["provisioning_listener", "server", "univention"]
known-local-folder = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
