[tool.poetry]
name = "nubus-provisioning-tests"
version = "0.1.0"
description = "Univention Nubus - Provisioning common test code"
authors = ["Univention GmbH <packages@univention.de>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "univention", from = "src" }]

[tool.poetry.dependencies]
#####################################
# Python 3.7 - commmon imports this #
#####################################
nats-py = ">=2.7.0"  # py311: "^2.9.0"
nubus-provisioning-backends = {path = "../backends"}
python = "^3.11"
pytest = ">=7.4.4"  # py311: "^8.3.3"
pytest-asyncio = ">=0.21.2"  # py311: "^0.24"
pytest-cov = ">=4.1.0"  # py311: "^5.0"
pytest-timeout = ">=2.3.1"

[tool.poetry.group.e2e-tests.dependencies]
ldap3 = "^2.9.1"
nubus-provisioning-consumer = {path = "../consumer"}
pytest-env = "^1.1.5"
requests = "^2.23.3"
udm-rest-api-client = "^0.0.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# The following works only with pytest-env>=1.1 (and Python 3.8+), which we'll get in the test Docker container.

[tool.pytest_env]
ADMIN_USERNAME = {value = "admin", skip_if_set = true}
ADMIN_PASSWORD = {value = "provisioning", skip_if_set = true}
UDM_USERNAME = {value = "cn=admin", skip_if_set = true}
UDM_PASSWORD = {value = "univention", skip_if_set = true}
LDAP_PORT = {value = 389, skip_if_set = true}
LDAP_HOST = {value = "ldap-server", skip_if_set = true}
TLS_MODE = {value = "off", skip_if_set = true}
LDAP_BASE_DN = {value = "dc=univention-organization,dc=intranet", skip_if_set = true}
LDAP_HOST_DN = {value = "cn=admin,{LDAP_BASE_DN}", transform = true}
LDAP_PASSWORD = {value = "univention", skip_if_set = true}
NATS_HOST = {value = "foo", skip_if_set = true}
NATS_PORT = {value = 1234, skip_if_set = true}
NATS_USER = {value = "api", skip_if_set = true}
NATS_PASSWORD = {value = "apipass", skip_if_set = true}
NATS_MAX_RECONNECT_ATTEMPTS = {value = 2, skip_if_set = true}
ADMIN_NATS_USER = {value = "admin", skip_if_set = true}
ADMIN_NATS_PASSWORD = {value = "nimda", skip_if_set = true}
PROVISIONING_API_BASE_URL = {value = "http://localhost:7777", skip_if_set = true}
PROVISIONING_API_USERNAME = {value = "foo", skip_if_set = true}
PROVISIONING_API_PASSWORD = {value = "bar", skip_if_set = true}
PREFILL_USERNAME = {value = "prefill", skip_if_set = true}
PREFILL_PASSWORD = {value = "prefillpass", skip_if_set = true}
MAX_PREFILL_ATTEMPTS = {value = 10, skip_if_set = true}
EVENTS_USERNAME_UDM = {value = "udm", skip_if_set = true}
EVENTS_PASSWORD_UDM = {value = "udmpass", skip_if_set = true}
LOG_LEVEL = {value = "DEBUG", skip_if_set = true}
MAX_ACKNOWLEDGEMENT_RETRIES = {value = 3, skip_if_set = true}
DEBUG = {value = "false", skip_if_set = true}
ROOT_PATH = {value = "/", skip_if_set = true}
CORS_ALL = {value = "false", skip_if_set = true}
