[project]
name = "nubus-provisioning-udm-transformer"
version = "0.1.0"
description = "Univention Nubus - Provisioning UDM Transformer"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.11.*"

dependencies = [
    "aiohttp<4.0.0,>=3.10.9",
    "daemoniker<1.0.0,>=0.2.3",
    "msgpack<2.0.0,>=1.1.0",
    "nubus-provisioning-common",
    "nubus-provisioning-backends",
    "pydantic<2",
]

[tool.uv.sources]
nubus-provisioning-backends = { path = "../backends", editable = true }
nubus-provisioning-common = { path = "../common", editable = true }

[project.scripts]
udm-transformer = "univention.provisioning.udm_transformer.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

