# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2025 Univention GmbH

[project]
name = "nubus-provisioning-udm-transformer"
version = "0.1.0"
description = "Univention Nubus - Provisioning UDM Transformer"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.13.*"

dependencies = [
    "aiohttp<4.0.0,>=3.13.2",
    "daemoniker<1.0.0,>=0.2.3",
    "msgpack<2.0.0,>=1.1.0",
    "nats-py<3.0.0,>=2.9.0",
    "nubus-provisioning-common",
    "nubus-provisioning-backends",
    "pydantic<3.0.0,>=2.9.2",
    "pydantic-settings<3.0.0,>=2.5.2",
    "udm-rest-api-client>=0.0.2",
    "dnspython<3.0,>=2.3",
    "urllib3>=2.7.0",
]

[tool.uv.sources]
# TODO: Temporary pin to a patched nats-py fixing premature KV watcher initial
# completion (univention/dev/projects/provisioning#135). Remove once
# https://github.com/nats-io/nats.py/pull/995 is merged and released.
nats-py = { git = "https://github.com/d3vv3/nats.py", rev = "f0deaeb85e2888b7175398a0b50d3a940b2692f5", subdirectory = "nats" }
nubus-provisioning-backends = { path = "../backends" }
nubus-provisioning-common = { path = "../common" }

[project.scripts]
udm-transformer = "univention.provisioning.udm_transformer.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/univention"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

